// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workspace just a,b,c,d,e packages create: layers/pkg 1`] = `
Object {
  "layers": Array [],
  "pkgs": Array [
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "b",
        "c",
      ],
      "folder": "a",
      "layer": "",
      "name": "a",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "c",
        "d",
      ],
      "folder": "b",
      "layer": "",
      "name": "b",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "d",
      ],
      "folder": "c",
      "layer": "",
      "name": "c",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "e",
      ],
      "folder": "d",
      "layer": "",
      "name": "d",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [],
      "folder": "e",
      "layer": "",
      "name": "e",
    },
  ],
}
`;

exports[`workspace just a,b,c,d,e packages create: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages findBundler: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages findPackage: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk all: logged 1`] = `
Array [
  "creating job [e walkABCDE]",
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk all: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
  "b": Array [
    "b walkABCDE()",
  ],
  "c": Array [
    "c walkABCDE()",
  ],
  "d": Array [
    "d walkABCDE()",
  ],
  "e": Array [
    "e walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter a: logged 1`] = `
Array [
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter a: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter b: logged 1`] = `
Array [
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter b: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
  "b": Array [
    "b walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter c,d: logged 1`] = `
Array [
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter c,d: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
  "b": Array [
    "b walkABCDE()",
  ],
  "c": Array [
    "c walkABCDE()",
  ],
  "d": Array [
    "d walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter c: logged 1`] = `
Array [
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter c: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
  "b": Array [
    "b walkABCDE()",
  ],
  "c": Array [
    "c walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter d: logged 1`] = `
Array [
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter d: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
  "b": Array [
    "b walkABCDE()",
  ],
  "c": Array [
    "c walkABCDE()",
  ],
  "d": Array [
    "d walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter e: logged 1`] = `
Array [
  "creating job [e walkABCDE]",
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter e: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
  "b": Array [
    "b walkABCDE()",
  ],
  "c": Array [
    "c walkABCDE()",
  ],
  "d": Array [
    "d walkABCDE()",
  ],
  "e": Array [
    "e walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false one walk filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks all: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks all: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE()",
  ],
  "b": Array [
    "b walk1ABCDE()",
  ],
  "c": Array [
    "c walk1ABCDE()",
  ],
  "d": Array [
    "d walk1ABCDE()",
  ],
  "e": Array [
    "e walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks all: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter a: logged 1`] = `
Array [
  "creating job [a walk1ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter a: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter a: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter b: logged 1`] = `
Array [
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter b: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE()",
  ],
  "b": Array [
    "b walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter b: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter c,d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter c,d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE()",
  ],
  "b": Array [
    "b walk1ABCDE()",
  ],
  "c": Array [
    "c walk1ABCDE()",
  ],
  "d": Array [
    "d walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter c,d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter c: logged 1`] = `
Array [
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter c: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE()",
  ],
  "b": Array [
    "b walk1ABCDE()",
  ],
  "c": Array [
    "c walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter c: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE()",
  ],
  "b": Array [
    "b walk1ABCDE()",
  ],
  "c": Array [
    "c walk1ABCDE()",
  ],
  "d": Array [
    "d walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter e: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter e: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE()",
  ],
  "b": Array [
    "b walk1ABCDE()",
  ],
  "c": Array [
    "c walk1ABCDE()",
  ],
  "d": Array [
    "d walk1ABCDE()",
  ],
  "e": Array [
    "e walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter e: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false two walks filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps all: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps all: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps all: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter a: logged 1`] = `
Array [
  "creating job [a walk1ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter a: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter a: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter b: logged 1`] = `
Array [
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter b: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter b: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter c,d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter c,d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter c,d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter c: logged 1`] = `
Array [
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter c: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter c: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter e: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter e: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter e: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk all-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps all: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps all: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(d walk2ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE(e walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps all: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter a: logged 1`] = `
Array [
  "creating job [a walk1ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter a: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter a: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter b: logged 1`] = `
Array [
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter b: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter b: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter c,d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter c,d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(d walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter c,d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter c: logged 1`] = `
Array [
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter c: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter c: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(d walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter e: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter e: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(d walk2ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE(e walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter e: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=false walk each-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk all: logged 1`] = `
Array [
  "creating job [e walkABCDE]",
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk all: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE,d walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE(d walkABCDE)",
  ],
  "d": Array [
    "d walkABCDE(e walkABCDE)",
  ],
  "e": Array [
    "e walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter a: logged 1`] = `
Array [
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter a: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter b: logged 1`] = `
Array [
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter b: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter c,d: logged 1`] = `
Array [
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter c,d: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE,d walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE(d walkABCDE)",
  ],
  "d": Array [
    "d walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter c: logged 1`] = `
Array [
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter c: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter d: logged 1`] = `
Array [
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter d: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE,d walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE(d walkABCDE)",
  ],
  "d": Array [
    "d walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter e: logged 1`] = `
Array [
  "creating job [e walkABCDE]",
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter e: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE,d walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE(d walkABCDE)",
  ],
  "d": Array [
    "d walkABCDE(e walkABCDE)",
  ],
  "e": Array [
    "e walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true one walk filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks all: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks all: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(c walk1ABCDE,d walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(d walk1ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(e walk1ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks all: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE(e walk2ABCDE)",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter a: logged 1`] = `
Array [
  "creating job [a walk1ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter a: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter a: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter b: logged 1`] = `
Array [
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter b: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(b walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter b: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter c,d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter c,d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(c walk1ABCDE,d walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(d walk1ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter c,d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter c: logged 1`] = `
Array [
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter c: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(c walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter c: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(c walk1ABCDE,d walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(d walk1ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter e: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter e: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(c walk1ABCDE,d walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(d walk1ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(e walk1ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter e: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE(e walk2ABCDE)",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true two walks filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps all: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps all: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE,d walk1ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk1ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk1ABCDE,e walk2ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps all: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE(e walk2ABCDE)",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter a: logged 1`] = `
Array [
  "creating job [a walk1ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter a: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter a: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter b: logged 1`] = `
Array [
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter b: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,b walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter b: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter c,d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter c,d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE,d walk1ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk1ABCDE,d walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter c,d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter c: logged 1`] = `
Array [
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter c: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter c: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE,d walk1ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk1ABCDE,d walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter e: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter e: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk1ABCDE,c walk2ABCDE,d walk1ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk1ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk1ABCDE,e walk2ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE(a walk2ABCDE,b walk2ABCDE,c walk2ABCDE,d walk2ABCDE,e walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter e: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE(e walk2ABCDE)",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk all-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps all: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps all: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE,c walk1ABCDE,d walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE,d walk1ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(d walk2ABCDE,e walk1ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE(e walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps all: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE(e walk2ABCDE)",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter a: logged 1`] = `
Array [
  "creating job [a walk1ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter a: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter a: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter b: logged 1`] = `
Array [
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter b: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter b: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter c,d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter c,d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE,c walk1ABCDE,d walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE,d walk1ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(d walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter c,d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter c: logged 1`] = `
Array [
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter c: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE,c walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter c: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter d: logged 1`] = `
Array [
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter d: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE,c walk1ABCDE,d walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE,d walk1ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(d walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter d: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter e: logged 1`] = `
Array [
  "creating job [e walk1ABCDE]",
  "creating job [d walk1ABCDE]",
  "creating job [c walk1ABCDE]",
  "creating job [b walk1ABCDE]",
  "creating job [a walk1ABCDE]",
  "creating job [e walk2ABCDE]",
  "creating job [d walk2ABCDE]",
  "creating job [c walk2ABCDE]",
  "creating job [b walk2ABCDE]",
  "creating job [a walk2ABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter e: walked1Debug 1`] = `
Object {
  "a": Array [
    "a walk1ABCDE(a walk2ABCDE,b walk1ABCDE,c walk1ABCDE)",
  ],
  "b": Array [
    "b walk1ABCDE(b walk2ABCDE,c walk1ABCDE,d walk1ABCDE)",
  ],
  "c": Array [
    "c walk1ABCDE(c walk2ABCDE,d walk1ABCDE)",
  ],
  "d": Array [
    "d walk1ABCDE(d walk2ABCDE,e walk1ABCDE)",
  ],
  "e": Array [
    "e walk1ABCDE(e walk2ABCDE)",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter e: walked2Debug 1`] = `
Object {
  "a": Array [
    "a walk2ABCDE(b walk2ABCDE,c walk2ABCDE)",
  ],
  "b": Array [
    "b walk2ABCDE(c walk2ABCDE,d walk2ABCDE)",
  ],
  "c": Array [
    "c walk2ABCDE(d walk2ABCDE)",
  ],
  "d": Array [
    "d walk2ABCDE(e walk2ABCDE)",
  ],
  "e": Array [
    "e walk2ABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just a,b,c,d,e packages walk treeDep=true walk each-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just one package create: layers/pkg 1`] = `
Object {
  "layers": Array [],
  "pkgs": Array [
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [],
      "folder": "x",
      "layer": "",
      "name": "x",
    },
  ],
}
`;

exports[`workspace just one package create: logged 1`] = `Array []`;

exports[`workspace just one package findBundler: logged 1`] = `Array []`;

exports[`workspace just one package findPackage: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=false one walk all: logged 1`] = `
Array [
  "creating job [x walk]",
]
`;

exports[`workspace just one package walk  treeDep=false one walk all: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walk()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false one walk filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=false one walk filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=false one walk filter x: logged 1`] = `
Array [
  "creating job [x walk]",
]
`;

exports[`workspace just one package walk  treeDep=false one walk filter x: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walk()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false two walks all: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=false two walks all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false two walks all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false two walks filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=false two walks filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=false two walks filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=false two walks filter x: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=false two walks filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false two walks filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false walk all-deps all: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=false walk all-deps all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1(x walk2)",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false walk all-deps all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false walk all-deps filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=false walk all-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=false walk all-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=false walk all-deps filter x: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=false walk all-deps filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1(x walk2)",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false walk all-deps filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false walk each-deps all: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=false walk each-deps all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1(x walk2)",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false walk each-deps all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false walk each-deps filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=false walk each-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=false walk each-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=false walk each-deps filter x: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=false walk each-deps filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1(x walk2)",
  ],
}
`;

exports[`workspace just one package walk  treeDep=false walk each-deps filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true one walk all: logged 1`] = `
Array [
  "creating job [x walk]",
]
`;

exports[`workspace just one package walk  treeDep=true one walk all: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walk()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true one walk filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=true one walk filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=true one walk filter x: logged 1`] = `
Array [
  "creating job [x walk]",
]
`;

exports[`workspace just one package walk  treeDep=true one walk filter x: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walk()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true two walks all: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=true two walks all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true two walks all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true two walks filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=true two walks filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=true two walks filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=true two walks filter x: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=true two walks filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true two walks filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true walk all-deps all: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=true walk all-deps all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1(x walk2)",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true walk all-deps all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true walk all-deps filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=true walk all-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=true walk all-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=true walk all-deps filter x: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=true walk all-deps filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1(x walk2)",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true walk all-deps filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true walk each-deps all: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=true walk each-deps all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1(x walk2)",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true walk each-deps all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true walk each-deps filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk  treeDep=true walk each-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=true walk each-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just one package walk  treeDep=true walk each-deps filter x: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk  treeDep=true walk each-deps filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1(x walk2)",
  ],
}
`;

exports[`workspace just one package walk  treeDep=true walk each-deps filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just x,y packages create: layers/pkg 1`] = `
Object {
  "layers": Array [],
  "pkgs": Array [
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "y",
      ],
      "folder": "x",
      "layer": "",
      "name": "x",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [],
      "folder": "y",
      "layer": "",
      "name": "y",
    },
  ],
}
`;

exports[`workspace just x,y packages create: logged 1`] = `Array []`;

exports[`workspace just x,y packages findBundler: logged 1`] = `Array []`;

exports[`workspace just x,y packages findPackage: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=false one walk all: logged 1`] = `
Array [
  "creating job [y walkXY]",
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false one walk all: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY()",
  ],
  "y": Array [
    "y walkXY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false one walk filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=false one walk filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=false one walk filter x: logged 1`] = `
Array [
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false one walk filter x: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false one walk filter y: logged 1`] = `
Array [
  "creating job [y walkXY]",
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false one walk filter y: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY()",
  ],
  "y": Array [
    "y walkXY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false two walks all: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false two walks all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY()",
  ],
  "y": Array [
    "y walk1XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false two walks all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false two walks filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=false two walks filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=false two walks filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=false two walks filter x: logged 1`] = `
Array [
  "creating job [x walk1XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false two walks filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false two walks filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false two walks filter y: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false two walks filter y: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY()",
  ],
  "y": Array [
    "y walk1XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false two walks filter y: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps all: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY,y walk2XY)",
  ],
  "y": Array [
    "y walk1XY(x walk2XY,y walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter x: logged 1`] = `
Array [
  "creating job [x walk1XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter y: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter y: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY,y walk2XY)",
  ],
  "y": Array [
    "y walk1XY(x walk2XY,y walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk all-deps filter y: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps all: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY)",
  ],
  "y": Array [
    "y walk1XY(y walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter x: logged 1`] = `
Array [
  "creating job [x walk1XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter y: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter y: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY)",
  ],
  "y": Array [
    "y walk1XY(y walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=false walk each-deps filter y: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true one walk all: logged 1`] = `
Array [
  "creating job [y walkXY]",
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true one walk all: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY(y walkXY)",
  ],
  "y": Array [
    "y walkXY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true one walk filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=true one walk filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=true one walk filter x: logged 1`] = `
Array [
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true one walk filter x: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true one walk filter y: logged 1`] = `
Array [
  "creating job [y walkXY]",
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true one walk filter y: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY(y walkXY)",
  ],
  "y": Array [
    "y walkXY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true two walks all: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true two walks all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(y walk1XY)",
  ],
  "y": Array [
    "y walk1XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true two walks all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY(y walk2XY)",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true two walks filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=true two walks filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=true two walks filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=true two walks filter x: logged 1`] = `
Array [
  "creating job [x walk1XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true two walks filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true two walks filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true two walks filter y: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true two walks filter y: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(y walk1XY)",
  ],
  "y": Array [
    "y walk1XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true two walks filter y: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY(y walk2XY)",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps all: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY,y walk1XY,y walk2XY)",
  ],
  "y": Array [
    "y walk1XY(x walk2XY,y walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY(y walk2XY)",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter x: logged 1`] = `
Array [
  "creating job [x walk1XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter y: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter y: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY,y walk1XY,y walk2XY)",
  ],
  "y": Array [
    "y walk1XY(x walk2XY,y walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk all-deps filter y: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY(y walk2XY)",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps all: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY,y walk1XY)",
  ],
  "y": Array [
    "y walk1XY(y walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY(y walk2XY)",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter x: logged 1`] = `
Array [
  "creating job [x walk1XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY()",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter y: logged 1`] = `
Array [
  "creating job [y walk1XY]",
  "creating job [x walk1XY]",
  "creating job [y walk2XY]",
  "creating job [x walk2XY]",
]
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter y: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1XY(x walk2XY,y walk1XY)",
  ],
  "y": Array [
    "y walk1XY(y walk2XY)",
  ],
}
`;

exports[`workspace just x,y packages walk treeDep=true walk each-deps filter y: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2XY(y walk2XY)",
  ],
  "y": Array [
    "y walk2XY()",
  ],
}
`;
